✨ feat(auth): mejorar la autenticación y la gestión de usuarios
- 【AuthController】
  - Eliminar la confirmación de contraseña del registro ya que no es necesaria.
  - Modificar la lógica para recordar la sesión del usuario para que la cookie se cree correctamente.
- 【Users】
  - Agregar el campo `username` a la tabla de usuarios.
- 【UsersSedeer】
  - Seeder para la creación de usuarios por defecto.
- 【UserMetaModel】
  - Agregar validación de tipos en la función `saveRememberToken`.
- 【main】
  - Se actualizaron las vistas de `styles` y `scripts`.
- 【login】
  - Se agregaron validaciones al formulario de login.
  - Se implementó el botón de carga mientras se realiza la petición.
- 【input】
  - Se agregaron estilos para el icono de carga.
- 【output】
  - Se agregaron estilos para el icono de carga y se modificaron estilos existentes.
- 【notify】
  - Se actualizaron los textos por defecto de las notificaciones.

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -4,3 +4,19 @@
     --color-clifford: #da373d;
     --color-primary: #18181b;
 }
+
+.dx-icon-loader {
+    width: 14px !important;
+    height: 14px !important;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: 3px solid gray;
+    border-right-color: #fdda24;
+    animation: l2 1s infinite linear;
+}
+
+@keyframes l2 {
+    to {
+        transform: rotate(1turn)
+    }
+}
